--- a/funding.html
+++ b/funding.html
@@ -26,10 +26,10 @@
 </div>
 <p>My research thrusts include optimization and leanring fundations of trustworthy and scalable ML/DL with their applications to signal processing, 
 computer vision, natural language processing, computer programs,  hardware design, and biology.</p>
-<h2>Intelligent Diagnosis for Machine and Human-Centric Adversaries <br /></h2>
-<p><p style="color:red;text-align:end;font-size:15px;">(Funded by DARPA, 10/2020 - present)</p></p>
+<h2>Intelligent Diagnosis for Machine and Human-Centric Adversaries </h2>
+<p><p style="color:black;text-align:end;font-size:15px;">(Funded by DARPA, 10/2020 - )</p></p>
 <p><img height="230" src="images/RED.png" style="float:right"></img>
-This project aims to build a generalizable and scalable learning system for reverse engineering of deception (RED), 
+This project aims to build a generalizable and scalable learning system for reverse engineering of deception (RED),
 which can automatically recover and index attack toolchain signatures in both machine-centric and human-centric attack scenarios, 
 with targets to fool machine learning (ML) decisions and human decisions, respectively. Existing works have studied on detecting and 
 defending these information deception attacks. To our knowledge, however, little work sought to formalize a RED technique either in 
