--- a/publications.html
+++ b/publications.html
@@ -34,16 +34,16 @@
 </li>
 <li><p>W. Niu, M. Sun, Z. Li, J.-A. Chen, J. Guan, X. Shen, Y. Wang, <b>S. Liu</b>, X. Lin, B. Ren, RT3D: Achieving Real-Time Execution of 3D Convolutional Neural Networks on Mobile Devices, <i>AAAI&rsquo;21</i></p>
 </li>
-<li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, Z. Wang, M. Carbin, <a href="https://arxiv.org/pdf/2007.12223.pdf" target=&ldquo;blank&rdquo;>The Lottery Ticket Hypothesis for the Pre-trained BERT Networks</a>, <i>NeurIPS&rsquo;20</i>  (<a href="https://news.mit.edu/2020/neural-model-language-1201" target=&ldquo;blank&rdquo;>MIT News</a>)</p>
+<li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, Z. Wang, M. Carbin, <a href="https://arxiv.org/pdf/2007.12223.pdf" target=&ldquo;blank&rdquo;>The Lottery Ticket Hypothesis for the Pre-trained BERT Networks</a>, <i>NeurIPS&rsquo;20</i>  <tt>(<a href="https://news.mit.edu/2020/neural-model-language-1201" target=&ldquo;blank&rdquo;>MIT News</a>)</tt></p>
 </li>
 <li><p>T. Chen, W. Zhang, J. Zhou, S. Chang, <b>S. Liu</b>, L. Amini, Z. Wang, <a href="https://arxiv.org/pdf/2010.09089.pdf" target=&ldquo;blank&rdquo;>Training Stronger Baselines for Learning to Optimize</a>, 
-<i>NeurIPS&rsquo;20</i> (spotlight, acceptance rate 3%)</p>
+<i>NeurIPS&rsquo;20</i> <tt>(spotlight, acceptance rate 3%)</tt></p>
 </li>
 <li><p>J. Mohapatra, C.-Y. Ko, L. Weng, P.-Y. Chen, <b>S. Liu</b>, L. Daniel, <a href="https://arxiv.org/pdf/2010.06651.pdf" target=&ldquo;blank&rdquo;>Higher-Order Certification For Randomized Smoothing</a>,
-<i>NeurIPS&rsquo;20</i> (spotlight, acceptance rate 3%)	</p>
+<i>NeurIPS&rsquo;20</i> <tt>(spotlight, acceptance rate 3%)</tt>	</p>
 </li>
 <li><p>K. Xu, G. Zhang, <b>S. Liu</b>, Q. Fan, M. Sun, H. Chen, P.-Y. Chen, Y. Wang, X. Lin, <a href="https://arxiv.org/pdf/1910.11099.pdf" target=&ldquo;blank&rdquo;>Adversarial T-shirt! Evading Person Detectors in A Physical World</a>,
-<i>ECCV&rsquo;20</i> (spotlight, acceptance rate 5%)</p>
+<i>ECCV&rsquo;20</i> <tt>(spotlight, acceptance rate 5%)</tt></p>
 </li>
 <li><p>R. Wang, G. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, M. Wang, <a href="https://arxiv.org/pdf/2007.15802.pdf" target=&ldquo;blank&rdquo;>Practical Detection of Trojan Neural Networks: Data-Limited and Data-Free Cases</a>,
 <i>ECCV&rsquo;20</i> </p>
