--- a/cv.html
+++ b/cv.html
@@ -6,15 +6,6 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Underscore example</title>
-<!-- MathJax -->
-<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
-<script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-	  TeX: { equationNumbers: { autoNumber: "AMS" } }
-});
-</script>
-<!-- End MathJax -->
 </head>
 <body>
 <script type="text/javascript">
@@ -29,11 +20,15 @@ try {
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Nived Rajaraman</div>
+<div class="menu-category">Sijia</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
+<div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="links\NivedRajaraman_CV.pdf">CV</a></div>
-<div class="menu-item"><a href="https://nivedr.github.io/theorhetorically/">Blog</a></div>
+<div class="menu-item"><a href="funding.html">Research&nbsp;Projects</a></div>
+<div class="menu-category">Teaching</div>
+<div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
