--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div class="menu-item"><a href="funding.html">Research&nbsp;Projects</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -66,7 +67,7 @@ a analysis. I intend to  seek a new learning  frontier  when  the  current  lear
 <p>* Two papers were accepted by CVPR 2020 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-23 23:29:53 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-12-30 22:15:55 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
