--- a/funding.html
+++ b/funding.html
@@ -19,6 +19,7 @@
 <div class="menu-item"><a href="funding.html" class="current">Research&nbsp;Projects</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
