update on Jan 13

--- a/publications.html
+++ b/publications.html
@@ -16,26 +16,36 @@
 <div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
-<div class="menu-item"><a href="funding.html">Research&nbsp;Projects</a></div>
+<div class="menu-item"><a href="funding.html">Projects</a></div>
+<div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="CSE891.html">CSE891</a></div>
+<div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Publications</h1>
 </div>
-<p>Please find the <b>full publication</b> list at <a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a></p>
-<h2>Conferences (2018 - present)</h2>
+<p>(Irregularly updated! See the <b>full publication</b> list at <a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a>)</p>
+<h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>R. Wang, K. Xu, <b>S. Liu</b>, P.-Y. Chen, T.-W. Weng, C. Gan, M. Wang, <a href="https://openreview.net/pdf?id=o81ZyBCojoA" target=&ldquo;blank&rdquo;>On Fast Adversarial Robustness Adaptation in Model-Agnostic Meta-Learning</a>, <i>ICLR&rsquo;21</i></p>
+</li>
+<li><p>T. Chen, Z. Zhang, <b>S. Liu</b>, S. Chang, and Z. Wang, <a href="https://openreview.net/pdf?id=qZzy5urZw9" target=&ldquo;blank&rdquo;>Robust Overfitting May be Mitigated by Properly Learned Smoothening</a>, <i>ICLR&rsquo;21</i></p>
+</li>
+<li><p>T. Chen, Z. Zhang, <b>S. Liu</b>, S. Chang, and Z. Wang, <a href="https://openreview.net/pdf?id=LXMSvPmsm0g" target=&ldquo;blank&rdquo;>Long Live the Lottery: The Existence of Winning Tickets in Lifelong Learning</a>, <i>ICLR&rsquo;21</i></p>
+</li>
+<li><p>S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly, <a href="https://openreview.net/pdf?id=PH5PH9ZO_4" target=&ldquo;blank&rdquo;>Generating Adversarial Computer Programs using Optimized Obfuscations</a>, <i>ICLR&rsquo;21</i></p>
+</li>
 <li><p>A. Boopathy, L. Weng, <b>S. Liu</b>, P.-Y. Chen, G. Zhang,   L. Daniel, Fast Training of Provably Robust Neural Networks by SingleProp, <i>AAAI&rsquo;21</i></p>
 </li>
 <li><p>M. Cheng, P.-Y. Chen, <b>S. Liu</b>, S. Chang, C.-J. Hsieh, P. Das, Self-Progressing Robust Training, <i>AAAI&rsquo;21</i></p>
 </li>
 <li><p>W. Niu, M. Sun, Z. Li, J.-A. Chen, J. Guan, X. Shen, Y. Wang, <b>S. Liu</b>, X. Lin, B. Ren, RT3D: Achieving Real-Time Execution of 3D Convolutional Neural Networks on Mobile Devices, <i>AAAI&rsquo;21</i></p>
 </li>
-<li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, Z. Wang, M. Carbin, <a href="https://arxiv.org/pdf/2007.12223.pdf" target=&ldquo;blank&rdquo;>The Lottery Ticket Hypothesis for the Pre-trained BERT Networks</a>, <i>NeurIPS&rsquo;20</i>  <tt>(<a href="https://news.mit.edu/2020/neural-model-language-1201" target=&ldquo;blank&rdquo;>MIT News</a>)</tt></p>
+<li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, Z. Wang, M. Carbin, <a href="https://arxiv.org/pdf/2007.12223.pdf" target=&ldquo;blank&rdquo;>The Lottery Ticket Hypothesis for the Pre-trained BERT Networks</a>, <i>NeurIPS&rsquo;20</i>  (<a href="https://news.mit.edu/2020/neural-model-language-1201" target=&ldquo;blank&rdquo;>MIT News</a>)</p>
 </li>
 <li><p>T. Chen, W. Zhang, J. Zhou, S. Chang, <b>S. Liu</b>, L. Amini, Z. Wang, <a href="https://arxiv.org/pdf/2010.09089.pdf" target=&ldquo;blank&rdquo;>Training Stronger Baselines for Learning to Optimize</a>, 
 <i>NeurIPS&rsquo;20</i> <tt>(spotlight, acceptance rate 3%)</tt></p>
@@ -113,8 +123,10 @@
 <li><p><b>S. Liu</b>, B. Kailkhura, P.-Y. Chen, P. Ting, S. Chang, L. Amini, <a href="https://arxiv.org/pdf/1805.10367.pdf" target=&ldquo;blank&rdquo;>Zeroth-Order Stochastic Variance Reduction for Nonconvex Optimization</a>,
 <i>NeurIPS&rsquo;18</i> </p>
 </li>
+<li><p><b>S. Liu</b>, A. Ren, Y. Wang, P. K. Varshney, <a href="https://ieeexplore.ieee.org/abstract/document/7952333" target=&ldquo;blank&rdquo;>Ultra-Fast Robust Compressive Sensing Based on Memristor Crossbars</a>, <i>ICASSP&rsquo;17</i> <tt>(Best Student Paper Award, Third Place)</tt></p>
+</li>
 </ol>
-<h2>Journals</h2>
+<h2>Journal Papers </h2>
 <ol>
 <li><p>S. Zhang, M. Wang, J. Xiong, <b>S. Liu</b>, P.-Y. Chen, <a href="https://ieeexplore.ieee.org/document/9152147" target=&ldquo;blank&rdquo;>Improved Linear Convergence of Training CNNs With Generalizability Guarantees: A One-Hidden-Layer Case</a>, <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2020</p>
 </li>
