--- a/talk.html
+++ b/talk.html
@@ -16,9 +16,11 @@
 <div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="funding.html">Research&nbsp;Projects</a></div>
+<div class="menu-item"><a href="funding.html">Projects</a></div>
+<div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="CSE891.html">CSE891</a></div>
+<div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html" class="current">Talks</a></div>
 </td>
 <td id="layout-content">
