--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <div class="menu-item"><a href="links\CV_SL_2020Jan.pdf">CV</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
-<div class="menu-item"><a href="funding.html">Research&nbsp;Projects</a></div>
+<div class="menu-item"><a href="funding.html">Projects</a></div>
+<div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="teaching.html">Courses</a></div>
+<div class="menu-item"><a href="CSE891.html">CSE891</a></div>
+<div class="menu-category">Others</div>
 <div class="menu-item"><a href="talk.html">Talks</a></div>
 </td>
 <td id="layout-content">
@@ -39,7 +41,6 @@ Twitter: @sijialiu17 <br />
 <div class="blockcontent">
 <p>I always look for working with highly motivated students, in terms of RA/TA/externship/internship/visiting students.
 Interested candidates are strongly encouraged to contact me by <a href="mailto:liusiji5@msu.edu" target=&ldquo;blank&rdquo;>email</a>, together with resume and transcripts.</p>
-<p><a href="links\RA_Openings_CS_MSU_Dr_Liu.pdf" target=&ldquo;blank&rdquo;>RA Openings are available!</a></p>
 </div></div>
 <h2>Short Bio</h2>
 <p>Sijia Liu received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, 
@@ -59,6 +60,7 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big dat
 a analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <h2>News</h2>
+<p>* Four papers were accepted by ICLR 2021</p>
 <p>* Three papers were accepted by AAAI 2021 </p>
 <p>* Grateful to receive a DARPA RED AIE Grant as a Co-PI </p>
 <p>* Three papers were accepted by NeurIPS 2020 </p>
@@ -67,7 +69,7 @@ a analysis. I intend to  seek a new learning  frontier  when  the  current  lear
 <p>* Two papers were accepted by CVPR 2020 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-12-30 22:15:55 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-13 23:02:55 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
