--- a/talk.html
+++ b/talk.html
@@ -26,8 +26,19 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Talks</h1>
-<div id="subtitle"></div>
 </div>
+<h2>Tutorial talks </h2>
+<ul>
+<li><p><a href="https://sites.google.com/umich.edu/cvpr-2020-zoo" target=&ldquo;blank&rdquo;>Zeroth Order Optimization: Theory and Applications to Deep Learning</a>, <i>CVPR&rsquo;20</i></p>
+</li>
+<li><p><a href="https://sites.google.com/view/adv-robustness-zoopt" target=&ldquo;blank&rdquo;>Recent Progress in Zeroth Order Optimization and Its Applications to Adversarial Robustness in Data Mining and Machine Learning</a>, <i>KDD&rsquo;19</i></p>
+</li>
+</ul>
+<h2>Organized workshops </h2>
+<ul>
+<li><p><a href="https://sites.google.com/view/advml" target=&ldquo;blank&rdquo;>Adversarial Learning Methods for Machine Learning and Data Mining</a></p>
+</li>
+</ul>
 </td>
 </tr>
 </table>
