--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big dat
 a analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <h2>News</h2>
-<p>* Four papers were accepted by ICLR 2021</p>
-<p>* Three papers were accepted by AAAI 2021 </p>
-<p>* Grateful to receive a DARPA RED AIE Grant as a Co-PI </p>
-<p>* Three papers were accepted by NeurIPS 2020 </p>
-<p>* Three papers were accepted by ECCV 2020 </p>
-<p>* Four papers were accepted by ICML 2020 </p>
-<p>* Two papers were accepted by CVPR 2020 </p>
+<p>* <b><i>Four</i> papers were accepted by ICLR 2021</b></p>
+<p>* <i>Three</i> papers were accepted by AAAI 2021</p>
+<p>* Grateful to receive a DARPA RED AIE Grant as a Co-PI</p>
+<p>* <i>Three</i> papers were accepted by NeurIPS 2020 </p>
+<p>* <i>Three</i> papers were accepted by ECCV 2020 </p>
+<p>* <i>Four</i> papers were accepted by ICML 2020 </p>
+<p>* <i>Two</i> papers were accepted by CVPR 2020 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-14 15:36:54 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-01-15 23:39:24 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
