update on Jan 22 v2

--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,10 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
+<li><p>J. Mohapatra, C.-Y. Ko, L. Weng, P.-Y. Chen, <b>S. Liu</b>, L. Daniel, <a href="null" target=&ldquo;blank&rdquo;>Hidden Cost of Randomized Smoothing</a>, <i>AISTATS&rsquo;21</i></p>
+</li>
+<li><p>Z. Li, P.-Y. Chen, <b>S. Liu</b>, S. Lu, Y. Xu, <a href="https://arxiv.org/pdf/2007.01284.pdf" target=&ldquo;blank&rdquo;>Rate-Improved Inexact Augmented Lagrangian Method for Constrained Nonconvex Optimization</a>, <i>AISTATS&rsquo;21</i></p>
+</li>
 <li><p>R. Wang, K. Xu, <b>S. Liu</b>, P.-Y. Chen, T.-W. Weng, C. Gan, M. Wang, <a href="https://openreview.net/pdf?id=o81ZyBCojoA" target=&ldquo;blank&rdquo;>On Fast Adversarial Robustness Adaptation in Model-Agnostic Meta-Learning</a>, <i>ICLR&rsquo;21</i></p>
 </li>
 <li><p>T. Chen, Z. Zhang, <b>S. Liu</b>, S. Chang, and Z. Wang, <a href="https://openreview.net/pdf?id=qZzy5urZw9" target=&ldquo;blank&rdquo;>Robust Overfitting May be Mitigated by Properly Learned Smoothening</a>, <i>ICLR&rsquo;21</i></p>
