--- a/group.html
+++ b/group.html
@@ -28,14 +28,27 @@
 <h1>Optimization and Trustworthy ML Group </h1>
 </div>
 <h2>Current Ph.D. students </h2>
-<ul>
-<li><p>Yuguang Yao</p>
-</li>
-<li><p>Yimeng Zhang</p>
-</li>
-<li><p>Yihua Zhang</p>
+<table class="imgtable"><tr><td>
+<img src="yuguang.JPG" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang Yao</a></p>
 </li>
 </ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="red_2_circle.JPG" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://damon-demon.github.io">Yimeng Zhang</a></p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="yihua.JPG" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
+</li>
+</ul>
+</td></tr></table>
 </td>
 </tr>
 </table>
