--- a/group.html
+++ b/group.html
@@ -29,21 +29,21 @@
 </div>
 <h2>Current Ph.D. students </h2>
 <table class="imgtable"><tr><td>
-<img src="images/yuguang.JPG" alt="94" width="91px" />&nbsp;</td>
+<img src="images/yuguang.jpg" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang Yao</a></p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/damon.JPG" alt="94" width="91px" />&nbsp;</td>
+<img src="images/damon.jpg" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng Zhang</a></p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/yihua.JPG" alt="94" width="91px" />&nbsp;</td>
+<img src="images/yihua.jpg" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
 </li>
