--- a/group.html
+++ b/group.html
@@ -36,7 +36,7 @@
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
-<img src="images/damon.png" alt="94" width="91px" />&nbsp;</td>
+<img src="images/damon.jpg" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng Zhang</a></p>
 </li>
