--- a/group.html
+++ b/group.html
@@ -31,14 +31,14 @@
 <table class="imgtable"><tr><td>
 <img src="images/yuguang.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang Yao</a></p>
+<li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang(Tony) Yao</a></p>
 </li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="images/damon.jpg" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
-<li><p><a href="https://damon-demon.github.io">Yimeng Zhang</a></p>
+<li><p><a href="https://damon-demon.github.io">Yimeng(Damon) Zhang</a></p>
 </li>
 </ul>
 </td></tr></table>
