--- a/group.html
+++ b/group.html
@@ -33,6 +33,8 @@
 <td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang(Tony) Yao</a></p>
 </li>
+<li><p>Ph.D. candidate (Spring 2021-current)</p>
+</li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
@@ -40,12 +42,25 @@
 <td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng(Damon) Zhang</a></p>
 </li>
+<li><p>Ph.D. candidate (Spring 2021-current)</p>
+</li>
 </ul>
 </td></tr></table>
 <table class="imgtable"><tr><td>
 <img src="images/yihua.png" alt="94" width="91px" />&nbsp;</td>
 <td align="left"><ul>
 <li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
+</li>
+<li><p>Ph.D. candidate (Fall 2021-current)</p>
+</li>
+</ul>
+</td></tr></table>
+<table class="imgtable"><tr><td>
+<img src="images/jinghan.png" alt="94" width="91px" />&nbsp;</td>
+<td align="left"><ul>
+<li><p><a href="https://github.com/jinghanjia">Jinghan Jia</a></p>
+</li>
+<li><p>Ph.D. candidate (Fall 2021-current)</p>
 </li>
 </ul>
 </td></tr></table>
