--- a/group.html
+++ b/group.html
@@ -33,7 +33,9 @@
 <td align="left"><ul>
 <li><p><a href="https://www.linkedin.com/in/tonyyaomsu/">Yuguang(Tony) Yao</a></p>
 </li>
-<li><p>Ph.D. candidate (Spring 2021-current)</p>
+<li><p>Ph.D. candidate in Computer Science (Spring 2021-current)</p>
+</li>
+<li><p>B.S. Automation @ Tsinghua University, China</p>
 </li>
 </ul>
 </td></tr></table>
@@ -42,7 +44,11 @@
 <td align="left"><ul>
 <li><p><a href="https://damon-demon.github.io">Yimeng(Damon) Zhang</a></p>
 </li>
-<li><p>Ph.D. candidate (Spring 2021-current)</p>
+<li><p>Ph.D. candidate in Computer Science (Spring 2021-current)</p>
+</li>
+<li><p>M.S. Electrical Engineering @ Columbia University, USA</p>
+</li>
+<li><p>BEng Electrical and Electronic Engineering @ University of Sheffield, UK</p>
 </li>
 </ul>
 </td></tr></table>
@@ -51,7 +57,9 @@
 <td align="left"><ul>
 <li><p><a href="https://github.com/StarkSchroedinger">Yihua Zhang</a></p>
 </li>
-<li><p>Ph.D. candidate (Fall 2021-current)</p>
+<li><p>Ph.D. candidate in Computer Science (Fall 2021-current)</p>
+</li>
+<li><p>B.S. Mechanical Engineering @ Huazhong University of Science and Technology, China</p>
 </li>
 </ul>
 </td></tr></table>
@@ -60,7 +68,11 @@
 <td align="left"><ul>
 <li><p><a href="https://github.com/jinghanjia">Jinghan Jia</a></p>
 </li>
-<li><p>Ph.D. candidate (Fall 2021-current)</p>
+<li><p>Ph.D. candidate in Computer Science (Fall 2021-current)</p>
+</li>
+<li><p>M.S. Electrical and Computer Engineering @ University of Florida, USA</p>
+</li>
+<li><p>B.S. Computer Science @ University of Science and Technology of China, China</p>
 </li>
 </ul>
 </td></tr></table>
