--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="images/sijia.png" alt="Temp" width="130px" />&nbsp;</td>
-<td align="left"><p>Assistant Professor, <a href="https://www.cse.msu.edu/" target=&ldquo;blank&rdquo;>Department of Computer Science and Engineering</a>,<br />
-<a href="https://msu.edu/" target=&ldquo;blank&rdquo;>Michigan State University</a> East Lansing, MI 48824<br />
-Affiliated Professor, <a href="https://mitibmwatsonailab.mit.edu/" target=&ldquo;blank&rdquo;>MIT-IBM Watson AI Lab</a>, Cambridge, MA 02142<br />
+<td align="left"><p>Assistant Professor, <a href="https://www.cse.msu.edu/">Department of Computer Science and Engineering</a>,<br />
+<a href="https://msu.edu/">Michigan State University</a> East Lansing, MI 48824<br />
+Affiliated Professor, <a href="https://mitibmwatsonailab.mit.edu/">MIT-IBM Watson AI Lab</a>, Cambridge, MA 02142<br />
 Email: liusiji5@msu.edu <br />
 Twitter: @sijialiu17 <br />
-<a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google scholar</a> <br /></p>
+<a href="https://scholar.google.com/citations?user=C7dO_UgAAAAJ&amp;hl=en">Google scholar</a> <br /></p>
 </td></tr></table>
 <div class="infoblock">
 <div class="blocktitle">Prospective Students</div>
 <div class="blockcontent">
 <p>I always look for working with highly motivated students, in terms of RA/TA/externship/internship/visiting students.
-Interested candidates are strongly encouraged to contact me by <a href="mailto:liusiji5@msu.edu" target=&ldquo;blank&rdquo;>email</a>, together with resume and transcripts.</p>
+Interested candidates are strongly encouraged to contact me by <a href="mailto:liusiji5@msu.edu">email</a>, together with resume and transcripts.</p>
 </div></div>
 <h2>Short Bio</h2>
 <p>Sijia Liu received the Ph.D. degree (with All-University Doctoral Prize) in Electrical and Computer Engineering from Syracuse University, NY, USA, in 2016. He was a Postdoctoral Research Fellow at the University of Michigan, Ann Arbor, in 2016-2017, 
@@ -60,13 +60,14 @@ More  broadly,  the  study  towards robust and scalable    AI  could  make  a  s
 and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big dat
 a analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
 <h2>News</h2>
-<p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html" target=&ldquo;blank&rdquo;>AISTATS 2021</a> </p>
-<p>* <i>Four</i> papers in <a href="https://iclr.cc" target=&ldquo;blank&rdquo;>ICLR 2021</a> </p>
-<p>* <i>Three</i> papers in <a href="https://aaai.org/Conferences/AAAI-21/" target=&ldquo;blank&rdquo;>AAAI 2021</a></p>
-<p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view" target=&ldquo;blank&rdquo;>DARPA AIE RED Grant</a> as a Co-PI</p>
+<p>* <i>Two</i> papers in <a href="http://cvpr2021.thecvf.com">CVPR 20201</a></p>
+<p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html">AISTATS 2021</a> </p>
+<p>* <i>Four</i> papers in <a href="https://iclr.cc">ICLR 2021</a> </p>
+<p>* <i>Three</i> papers in <a href="https://aaai.org/Conferences/AAAI-21/">AAAI 2021</a></p>
+<p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA AIE RED Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-22 18:27:50 PST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-03-02 09:58:14 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
