--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,9 @@
 <h2>Selected Conference Papers</h2>
 <p>* represents equal contribution</p>
 <ol>
-<li><p>T. Chen, J. Frankle, S. Chang, S. Liu, Y. Zhang, M. Carbin, and Z. Wang. <a href="https://arxiv.org/pdf/2012.06908.pdf">The Lottery Tickets Hypothesis for Supervised and Self-supervised Pre-training in Computer Vision Models</a>, <i>CVPR&rsquo;21</i></p>
+<li><p>Z. Li, G. Yuan, W. Niu, Y. Li, P. Zhao, Y. Cai, X. Shen, Z. Zhan, Z. Kong, Q. Jin, Z. Chen, <b>S. Liu</b>, K. Yang, Y. Wang, B. Ren, and X. Lin. NPAS: A compiler-aware framework of unified network pruning and architecture search for beyond real-time mobile acceleration, <i>CVPR&rsquo;21 (Oral)</i></p>
+</li>
+<li><p>T. Chen, J. Frankle, S. Chang, <b>S. Liu</b>, Y. Zhang, M. Carbin, and Z. Wang. <a href="https://arxiv.org/pdf/2012.06908.pdf">The Lottery Tickets Hypothesis for Supervised and Self-supervised Pre-training in Computer Vision Models</a>, <i>CVPR&rsquo;21</i></p>
 </li>
 <li><p>J. Mohapatra, C.-Y. Ko, L. Weng, P.-Y. Chen, <b>S. Liu</b>, L. Daniel, <a href="null">Hidden Cost of Randomized Smoothing</a>, <i>AISTATS&rsquo;21</i></p>
 </li>
