--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@ As AI moves from the lab into the real world (e.g., autonomous vehicles), ensuri
 its deployment. Moreover, as datasets, ML/DL models, and learning tasks become increasingly complex, getting ML/DL to scale calls for new advances in learning algorithm design.
 Thus, robustness and scalability  underscore my current and future research, and of course, these two goals are intertwined.  
 More  broadly,  the  study  towards robust and scalable    AI  could  make  a  significant  impact  on  machine learning theories, 
-and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big dat
-a analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
+and induce more promising applications in, e.g., automated ML, meta-learning, privacy and security, hardware design, and big data analysis. I intend to  seek a new learning  frontier  when  the  current  learning  algorithms  become  infeasible, and formalize  foundations  of  secure  learning.</p>
+<p>Please refer to <a href="https://lsjxjtu.github.io/funding.html">Projects</a> for some research highlights.</p>
 <h2>News</h2>
+<p>* MIT news ‘<a href="https://news.mit.edu/2021/toward-deep-learning-models-that-can-reason-about-code-like-humans-0415">Toward deep-learning models that can reason about code more like humans</a>’ on our ICLR’21 work ‘Adversarial Programs’ [<a href="https://openreview.net/pdf?id=PH5PH9ZO_4">paper</a>, <a href="https://github.com/ALFA-group/adversarial-code-generation">code</a>].</p>
 <p>* <i>Two</i> papers in <a href="http://cvpr2021.thecvf.com">CVPR 2021</a></p>
 <p>* <i>Two</i> papers in <a href="https://aistats.org/aistats2021/index.html">AISTATS 2021</a> </p>
 <p>* <i>Four</i> papers in <a href="https://iclr.cc">ICLR 2021</a> </p>
@@ -67,7 +68,7 @@ a analysis. I intend to  seek a new learning  frontier  when  the  current  lear
 <p>* Grateful to receive a <a href="https://beta.sam.gov/opp/f108cad02f824285af5ca85e1f7481f4/view">DARPA AIE RED Grant</a> as a Co-PI</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-03-02 10:05:15 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-05-01 07:56:23 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
