--- a/funding.html
+++ b/funding.html
@@ -70,19 +70,19 @@
 </li>
 </ul>
 <ol>
-<li><p>S. Srikant, S. Liu, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly, Generating Adversarial Computer Programs using Optimized Obfuscations, ICLR’21</p>
+<li><p>S. Srikant, <b>S. Liu</b>, T. Mitrovska, S. Chang, Q. Fan, G. Zhang, U.-M. O'Reilly, Generating Adversarial Computer Programs using Optimized Obfuscations, ICLR’21</p>
 </li>
-<li><p>K. Xu, G. Zhang, S. Liu, Q. Fan, M. Sun, H. Chen, P.-Y. Chen, Y. Wang, X. Lin, Adversarial T-shirt! Evading Person Detectors in A Physical World, ECCV’20 </p>
+<li><p>K. Xu, G. Zhang, <b>S. Liu</b>, Q. Fan, M. Sun, H. Chen, P.-Y. Chen, Y. Wang, X. Lin, Adversarial T-shirt! Evading Person Detectors in A Physical World, ECCV’20 </p>
 </li>
-<li><p>R. Wang, G. Zhang, S. Liu, P.-Y. Chen, J. Xiong, M. Wang, Practical Detection of Trojan Neural Networks: Data-Limited and Data-Free Cases, ECCV’20</p>
+<li><p>R. Wang, G. Zhang, <b>S. Liu</b>, P.-Y. Chen, J. Xiong, M. Wang, Practical Detection of Trojan Neural Networks: Data-Limited and Data-Free Cases, ECCV’20</p>
 </li>
-<li><p>A. Boopathy, S. Liu, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel, Proper Network Interpretability Helps Adversarial Robustness in Classification, ICML’20</p>
+<li><p>A. Boopathy, <b>S. Liu</b>, G. Zhang, C. Liu, P.-Y. Chen, S. Chang, L. Daniel, Proper Network Interpretability Helps Adversarial Robustness in Classification, ICML’20</p>
 </li>
-<li><p>T. Chen, S. Liu, S. Chang, Y. Cheng, L. Amini, Z. Wang, Adversarial Robustness: From Self-Supervised Pretraining to Fine-Tuning, CVPR’20</p>
+<li><p>T. Chen, <b>S. Liu</b>, S. Chang, Y. Cheng, L. Amini, Z. Wang, Adversarial Robustness: From Self-Supervised Pretraining to Fine-Tuning, CVPR’20</p>
 </li>
-<li><p>K. Xu<b>, H. Chen</b>, S. Liu, P.-Y. Chen, T.-W. Wen, M. Hong, X. Lin, Topology Attack and Defense for Graph Neural Networks: An Optimization Perspective, IJCAI’19</p>
+<li><p>K. Xu, H. Chen, <b>S. Liu</b>, P.-Y. Chen, T.-W. Wen, M. Hong, X. Lin, Topology Attack and Defense for Graph Neural Networks: An Optimization Perspective, IJCAI’19</p>
 </li>
-<li><p>K. Xu<b>, S. Liu</b>, P. Zhao, P.-Y. Chen, H. Zhang, D. Erdogmus, Y. Wang, X. Lin, Structured Adversarial Attack: Towards General Implementation and Better Interpretability, ICLR’19</p>
+<li><p>K. Xu, <b>S. Liu</b>, P. Zhao, P.-Y. Chen, H. Zhang, D. Erdogmus, Y. Wang, X. Lin, Structured Adversarial Attack: Towards General Implementation and Better Interpretability, ICLR’19</p>
 </li>
 </ol>
 <h2>Zeroth-Order (ZO) Optimization: Theory, Methods and Applications [<a href="https://ieeexplore.ieee.org/document/9186148">Tutorial work</a> on IEEE Signal Processing Magazine]</h2>
@@ -97,19 +97,19 @@
 </li>
 </ul>
 <ol>
-<li><p>S. Liu, B. Kailkhura, P.-Y. Chen, P. Ting, S. Chang, L. Amini, Zeroth-Order Stochastic Variance Reduction for Nonconvex Optimization, NeurIPS’18</p>
+<li><p><b>S. Liu</b>, B. Kailkhura, P.-Y. Chen, P. Ting, S. Chang, L. Amini, Zeroth-Order Stochastic Variance Reduction for Nonconvex Optimization, NeurIPS’18</p>
 </li>
-<li><p>C.-C. Tu<b>, P. Ting</b>, P.-Y. Chen*, S. Liu, H. Zhang, J. Yi, C.-J. Hsieh, S.-M. Cheng, AutoZOOM: Autoencoder-based Zeroth Order Optimization Method for Attacking Black-box Neural Networks, AAAI’19</p>
+<li><p>C.-C. Tu, P. Ting, P.-Y. Chen, <b>S. Liu</b>, H. Zhang, J. Yi, C.-J. Hsieh, S.-M. Cheng, AutoZOOM: Autoencoder-based Zeroth Order Optimization Method for Attacking Black-box Neural Networks, AAAI’19</p>
 </li>
-<li><p>S. Liu, P.-Y. Chen, X. Chen, M. Hong, SignSGD via Zeroth-Order Oracle, ICLR’19</p>
+<li><p><b>S. Liu</b>, P.-Y. Chen, X. Chen, M. Hong, SignSGD via Zeroth-Order Oracle, ICLR’19</p>
 </li>
-<li><p>P. Zhao, S. Liu, P.-Y. Chen, N. Hoang, K. Xu, B. Kailkhura, X. Lin, On the Design of Black-box Adversarial Examples by Leveraging Gradient-free Optimization and Operator Splitting Method, ICCV’19</p>
+<li><p>P. Zhao, <b>S. Liu</b>, P.-Y. Chen, N. Hoang, K. Xu, B. Kailkhura, X. Lin, On the Design of Black-box Adversarial Examples by Leveraging Gradient-free Optimization and Operator Splitting Method, ICCV’19</p>
 </li>
-<li><p>X. Chen<b>, S. Liu</b>, K. Xu<b>, X. Li</b>, X. Lin, M. Hong, D. Cox, ZO-AdaMM: Zeroth-Order Adaptive Momentum Method for Black-Box Optimization, NeurIPS’19</p>
+<li><p>X. Chen, <b>S. Liu</b>, K. Xu, X. Li, X. Lin, M. Hong, D. Cox, ZO-AdaMM: Zeroth-Order Adaptive Momentum Method for Black-Box Optimization, NeurIPS’19</p>
 </li>
-<li><p>M. Cheng, S. Singh, P.-Y. Chen, S. Liu, C.-J. Hsieh, <a href="https://arxiv.org/pdf/1909.10773.pdf">Sign-OPT: A Query-Efficient Hard-label Adversarial Attack</a>, ICLR’20</p>
+<li><p>M. Cheng, S. Singh, P.-Y. Chen, <b>S. Liu</b>, C.-J. Hsieh, <a href="https://arxiv.org/pdf/1909.10773.pdf">Sign-OPT: A Query-Efficient Hard-label Adversarial Attack</a>, ICLR’20</p>
 </li>
-<li><p>S. Liu<b>, S. Lu</b>, X. Chen<b>, Y. Feng</b>, K. Xu<b>, A. Al-Dujaili</b>, M. Hong, U.-M. O'Reilly, <a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a>, ICML’20</p>
+<li><p><b>S. Liu</b>, S. Lu, X. Chen, Y. Feng, K. Xu, A. Al-Dujaili, M. Hong, U.-M. O'Reilly, <a href="https://arxiv.org/pdf/1909.13806.pdf">Min-Max Optimization without Gradients: Convergence and Applications to Adversarial ML</a>, ICML’20</p>
 </li>
 </ol>
 <h1>Research Support</h1>
