--- a/funding.html
+++ b/funding.html
@@ -86,8 +86,11 @@
 </li>
 </ol>
 <h2>Zeroth-Order (ZO) Optimization: Theory, Methods and Applications [<a href="https://ieeexplore.ieee.org/document/9186148">Tutorial work</a> on IEEE Signal Processing Magazine]</h2>
-<p><b>Description</b>: ZO optimization (learning without gradients) is increasingly embraced for solving many machine learning (ML) problems, where explicit expressions of the gradients are difficult or infeasible to obtain. Appealing applications include, e.g., robustness evaluation of black-box deep neural networks (DNNs), hyper-parameter optimization for automated ML, meta-learning, DNN diagnosis and explanation, and scientific discovery using black-box simulators. An illustrative example of ZO optimization versus first-order optimization is shown below.
-<b>Two of our achievements are highlighted below.</b></p>
+<p><b>Description</b>: ZO optimization (learning without gradients) is increasingly embraced for solving many machine learning (ML) problems, where explicit expressions of the gradients are difficult or infeasible to obtain. Appealing applications include, e.g., robustness evaluation of black-box deep neural networks (DNNs), hyper-parameter optimization for automated ML, meta-learning, DNN diagnosis and explanation, and scientific discovery using black-box simulators. An illustrative example of ZO optimization versus first-order optimization is shown below.</p>
+<table class="imgtable"><tr><td>
+<img src="images/ZO.png" alt="150" width="700px" />&nbsp;</td>
+<td align="left"></td></tr></table>
+<p><b>Two of our achievements are highlighted below.</b></p>
 <ul>
 <li><p><b>First</b>, we have developed a series of theoretically-grounded ZO learning algorithms ranging from convex, nonconvex to min-max problems. </p>
 </li>
